Delete token confirmation; Fixed snackbar on mobile devices; Added menu component; Cleaned code

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -107,3 +107,8 @@ ul.no-list-style {
     align-items: center;
     justify-content: space-between;
 }
+
+.iconMenu {
+    margin-right: 12px;
+    margin-left: -4px;
+}
